README: add warning about the status of development

--- a/README
+++ b/README
@@ -1,5 +1,7 @@
 # FD6FTracker
 
+THIS PROJECT IS STILL WORK IN PROGRESS AND DOES NOT WORK, YET.
+
 Contact Tracing Bluetooth Specification (Apple/Google)
 https://blog.google/documents/58/Contact_Tracing_-_Bluetooth_Specification_v1.1_RYGZbKW.pdf
 
