--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 # FD6FTracker
 
-THIS PROJECT IS STILL WORK IN PROGRESS AND DOES NOT WORK, YET.
+Scan & count BLE advertising packets from Apple/Google Contact Tracing service.
 
 Contact Tracing Bluetooth Specification (Apple/Google)
 https://blog.google/documents/58/Contact_Tracing_-_Bluetooth_Specification_v1.1_RYGZbKW.pdf
